--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
@@ -8,8 +8,8 @@
   
   <title>Frontend Mentor | Interactive rating component</title>
 
-  <link rel="stylesheet" href="../src/index.css">
-</head lang="en-US">
+  <link rel="stylesheet" href="./src/index.css">
+</head>
 <body id="body">
 
   <!-- Rating state start -->
@@ -45,6 +45,6 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Nayanmoni Baruah</a>.
   </div> -->
-  <script src="../src/index.js"></script>
+  <script src="./src/index.js"></script>
 </body>
 </html>
