--- a/root/index.html
+++ b/root/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
@@ -9,7 +9,7 @@
   <title>Frontend Mentor | Interactive rating component</title>
 
   <link rel="stylesheet" href="../src/index.css">
-</head lang="en-US">
+</head>
 <body id="body">
 
   <!-- Rating state start -->
