--- a/root/index.html
+++ b/root/index.html
@@ -8,7 +8,7 @@
   
   <title>Frontend Mentor | Interactive rating component</title>
 
-  <link rel="stylesheet" href="../src/index.css">
+  <link rel="stylesheet" href="src/index.css">
 </head>
 <body id="body">
 
@@ -45,6 +45,6 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Nayanmoni Baruah</a>.
   </div> -->
-  <script src="../src/index.js"></script>
+  <script src="src/index.js"></script>
 </body>
 </html>
